[workspace]
members = [
    "pbjson",
    "pbjson-build",
    "pbjson-test",
    "pbjson-types",
]

resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"

[workspace.dependencies]
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
heck = "0.5"
itertools = "0.14"
pbjson = { path = "pbjson", version = "0.8" }
pbjson-build = { path = "pbjson-build", version = "0.8" }
pbjson-types = { path = "pbjson-types", version = "0.8" }
prost = { git = "https://github.com/blizzardfinnegan/prost.git", rev = "8579f8b" }
prost-build = { git = "https://github.com/blizzardfinnegan/prost.git", rev = "8579f8b" }
prost-types = { git = "https://github.com/blizzardfinnegan/prost.git", rev = "8579f8b" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"
