[package]
name = "informalsystems-pbjson-build"
version = "0.5.1"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Generates Serialize and Deserialize implementations for prost message types"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/informalsystems/pbjson"

[lib]
name = "pbjson_build"

[dependencies]
heck = "0.4"
prost = "0.11"
prost-types = "0.11"
itertools = "0.10"

[dev-dependencies]
tempfile = "3.1"
