[package]
name = "pbjson-build"
version = "0.7.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Generates Serialize and Deserialize implementations for prost message types"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"

[dependencies]
heck = "0.5"
prost = "0.14"
prost-types = "0.14"
itertools = "0.14"

[dev-dependencies]
tempfile = "3.1"
