[package]
name = "informalsystems-pbjson-test"
version = "0.5.1"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Test resources for pbjson converion"
repository = "https://github.com/informalsystems/pbjson"
publish = false

[lib]
name = "pbjson_test"

[dependencies]
prost = { version = "0.11", default-features = false}
informalsystems-pbjson = { path = "../pbjson" , default-features = false}
informalsystems-pbjson-types = { path = "../pbjson-types" , default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
std = ["prost/std", "serde/std", "informalsystems-pbjson/std", "informalsystems-pbjson-types/std"]
ignore-unknown-fields = []
btree = []
emit-fields = []
use-integers-for-enums = []
preserve-proto-field-names = []

[dev-dependencies]
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.11"
informalsystems-pbjson-build = { path = "../pbjson-build" }
