[package]
name = "pbjson-test"
version = "0.8.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Test resources for pbjson converion"
repository = "https://github.com/influxdata/pbjson"

[dependencies]
prost = { git = "https://github.com/blizzardfinnegan/prost.git", rev = "8579f8b" }
pbjson = { path = "../pbjson" }
pbjson-types = { path = "../pbjson-types" }
serde = { version = "1.0", features = ["derive"] }

[features]
ignore-unknown-fields = []
btree = []
emit-fields = []
use-integers-for-enums = []
preserve-proto-field-names = []

[dev-dependencies]
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
prost-build = { git = "https://github.com/blizzardfinnegan/prost.git", rev = "8579f8b" }
pbjson-build = { path = "../pbjson-build" }
