[package]
name = "pbjson-test"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Test resources for pbjson converion"

[dependencies]
prost.workspace = true
pbjson.workspace = true
pbjson-types.workspace = true
serde.workspace = true

[features]
ignore-unknown-enum-variants = []
ignore-unknown-fields = []
btree = []
emit-fields = []
use-integers-for-enums = []
preserve-proto-field-names = []

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true
pbjson-build.workspace = true
