[package]
name = "informalsystems-pbjson-types"
version = "0.5.1"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Protobuf well known types with serde serialization support"
edition = "2021"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/informalsystems/pbjson"
exclude = ["protos/*"]

[lib]
name = "pbjson_types"

[features]
default = ["std"]
std = ["chrono/std", "informalsystems-pbjson/std", "prost/std", "serde/std"]

[dependencies] # In alphabetical order
bytes = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
informalsystems-pbjson = { path = "../pbjson", version = "0.5" , default-features = false }
prost = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }

[dev-dependencies]
serde_json = "1.0"

[build-dependencies] # In alphabetical order
prost-build = "0.11"
informalsystems-pbjson-build = { path = "../pbjson-build", version = "0.5" }
