[package]
name = "informalsystems-pbjson"
version = "0.5.1"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Utilities for pbjson conversion"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/informalsystems/pbjson"

[lib]
name = "pbjson"

[features]
default = ["std"]
std = ["serde/std", "base64/std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }

[dev-dependencies]
bytes = "1.0"
rand = "0.8"
